fixed section-3 card overflowing

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  /* overflow: hidden; */
 }
+
 /* End of Common Styles */
 
 /* Navbar */
@@ -414,6 +416,7 @@ html {
   display: flex;
   align-items: center;
   padding-left: 10rem;
+  overflow: hidden;
 }
 
 .pricing-cards-wrapper {
@@ -421,6 +424,7 @@ html {
   display: flex;
   justify-content: space-evenly;
   padding: 5rem;
+  position: absolute;
 }
 
 .pricing-card {
